--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ Soft Pink: hsl(333, 80%, 67%) */
 
 .container main {
   max-width: 1100px;
-  margin: 5rem auto;
+  margin: 8rem auto;
 }
 
 .sub-container {
@@ -39,7 +39,8 @@ Soft Pink: hsl(333, 80%, 67%) */
 
 .info h1 {
   color: hsl(300, 43%, 22%);
-  font-size: 60px;
+  font-size: 55px;
+  letter-spacing: -2px;
 }
 
 .info p {
@@ -55,8 +56,8 @@ Soft Pink: hsl(333, 80%, 67%) */
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
-  padding: 2rem 0 2rem 8rem;
-  flex: 1.5 1 0;
+  padding: 1.5rem 0 2.5rem 9rem;
+  flex: 1.3 1 0;
 }
 
 #card-note-container-one {
@@ -96,25 +97,52 @@ Soft Pink: hsl(333, 80%, 67%) */
 .cards-comment-section {
   display: flex;
   gap: 2rem;
+  margin-top: 3rem;
 }
 
 .card-comment-container{
-  height: 350px;
+  height: 260px;
+  border: 1px solid red;
 }
 
 .card-comment {
   background-color: hsl(300, 43%, 22%);
   border-radius: 0.5rem;
-  padding: 3rem 2rem;
+  padding: 2.5rem 2rem;
+
 }
 
 .card-comment header {
   display: flex;
-  align-items: top;
+  align-items: center;
   gap: 1.5rem;
 }
 
+.card-comment blockquote{
+  margin-top: 1.5rem;
+  line-height: 20px;
+}
+
 .card-comment header img {
-  width: 50px;
+  width: 40px;
   border-radius: 2rem;
+}
+
+.title-card h2 ,
+.card-comment blockquote{
+  color: #fff;
+}
+
+.title-card h2{
+  margin-bottom: 5px;
+}
+
+.title-card h2,
+.title-card mark{
+  font-size: 15px;
+}
+
+.title-card mark {
+  background-color: transparent;
+  color: hsl(333, 80%, 67%);
 }
