--- a/css/style.css
+++ b/css/style.css
@@ -23,41 +23,58 @@ Soft Pink: hsl(333, 80%, 67%) */
   box-sizing: border-box;
   font-family: "League Spartan", sans-serif;
 }
+main {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-.container main {
-  max-width: 1100px;
-  margin: 8rem auto;
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  max-width: 80%;
+  height: 480px;
+  border: 1px solid red;
 }
 
 .sub-container {
-  display: flex;
+   flex: 1.5 1 0;
+  /* display: flex;  */
+  /* gap: 10rem; */
+
+  display: grid;
+  grid-template-columns: repeat(2,3fr);
 }
 
 .info {
-  flex: 1 1 0;
+  /* flex: 1 1 0; */
+  grid-area: 1/1/1/span 1;
 }
 
 .info h1 {
   color: hsl(300, 43%, 22%);
-  font-size: 55px;
+  font-size: 50px;
   letter-spacing: -2px;
 }
 
 .info p {
   color: hsl(303, 10%, 53%);
-  font-size: 18px;
-  margin: 2rem 0;
+  font-size: 16px;
+  text-shadow: 0px 0px 1px hsl(303, 10%, 53%);
+  margin: 1rem 0;
   line-height: 1.5rem;
   
 }
 
 .card-note-section {
+  grid-area: 1/2/1/span 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
-  padding: 1.5rem 0 2.5rem 9rem;
-  flex: 1.3 1 0;
+  /* flex: 1.4 1 0; */
 }
 
 #card-note-container-one {
@@ -74,57 +91,63 @@ Soft Pink: hsl(333, 80%, 67%) */
 .card-note {
   display: flex;
   align-items: center;
-  gap: 2rem;
-  padding: 1rem 2rem;
+  gap: 1rem;
+  padding: 16px 35px 16px 25px;
   background-color: hsl(300, 24%, 96%);
   border-radius: 0.5rem;
-  min-width: 430px;
+  min-width: 360px;
 }
 
 .card-note h3 {
   color: hsl(300, 43%, 22%);
-  font-size: 17px;
+  font-size: 15px;
 }
 
 .list-stars {
   list-style: none;
   display: flex;
-  gap: 8px;
+  gap: 5px;
 }
 
-/* -------------------- */
+.list-stars li img {
+   width: 15px;
+}
+
+/*  */
+
 
 .cards-comment-section {
+  /* flex: 1 1 0; */
   display: flex;
-  gap: 2rem;
-  margin-top: 3rem;
+  gap: 1.5rem;
 }
 
 .card-comment-container{
-  height: 260px;
+  /* height: 250px; */
   border: 1px solid red;
 }
 
 .card-comment {
   background-color: hsl(300, 43%, 22%);
   border-radius: 0.5rem;
-  padding: 2.5rem 2rem;
+  padding: 35px 25px;
 
 }
 
 .card-comment header {
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  gap: 20px;
 }
 
 .card-comment blockquote{
-  margin-top: 1.5rem;
+  font-size: 0.9rem;
+  margin-top: 20px;
   line-height: 20px;
 }
 
 .card-comment header img {
-  width: 40px;
+  width: 35px;
   border-radius: 2rem;
 }
 
@@ -139,7 +162,7 @@ Soft Pink: hsl(333, 80%, 67%) */
 
 .title-card h2,
 .title-card mark{
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .title-card mark {
