--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,3 @@
-/* <style>
-.attribution {
-  font-size: 11px;
-  text-align: center;
-}
-.attribution a {
-  color: hsl(228, 45%, 44%);
-}
-</style> */
-
-/* Dark Grayish Magenta: hsl(303, 10%, 53%)
-Light Grayish Magenta: hsl(300, 24%, 96%)
-White: hsl(0, 0%, 100%);
-
-Very Dark Magenta: hsl(300, 43%, 22%)
-Soft Pink: hsl(333, 80%, 67%) */
-
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 
 * {
@@ -33,35 +16,35 @@ main {
 .container {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 3rem;
   max-width: 80%;
-  height: 480px;
-  border: 1px solid red;
+  min-height: 580px;
+  margin-top: 2rem;
+  /* border: 1px solid red; */
 }
 
 .sub-container {
-   flex: 1.5 1 0;
-  /* display: flex;  */
-  /* gap: 10rem; */
-
   display: grid;
-  grid-template-columns: repeat(2,3fr);
+  grid-template-columns: repeat(12,1fr);
 }
 
 .info {
-  /* flex: 1 1 0; */
-  grid-area: 1/1/1/span 1;
+  grid-area: 1/1/1/span 5;
+  width: 90%;
 }
+
+
 
 .info h1 {
   color: hsl(300, 43%, 22%);
-  font-size: 50px;
+  width: 70%;
+  font-size: 55px;
   letter-spacing: -2px;
 }
 
 .info p {
   color: hsl(303, 10%, 53%);
-  font-size: 16px;
+  font-size: 20px;
   text-shadow: 0px 0px 1px hsl(303, 10%, 53%);
   margin: 1rem 0;
   line-height: 1.5rem;
@@ -69,12 +52,13 @@ main {
 }
 
 .card-note-section {
-  grid-area: 1/2/1/span 2;
+  width: 90%;
+  margin-left: auto;
+  grid-area: 1/7/1/span 12;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
-  /* flex: 1.4 1 0; */
 }
 
 #card-note-container-one {
@@ -92,15 +76,15 @@ main {
   display: flex;
   align-items: center;
   gap: 1rem;
-  padding: 16px 35px 16px 25px;
+  padding: 16px 45px 16px 30px;
   background-color: hsl(300, 24%, 96%);
   border-radius: 0.5rem;
-  min-width: 360px;
+  min-width: 425px;
 }
 
 .card-note h3 {
   color: hsl(300, 43%, 22%);
-  font-size: 15px;
+  font-size: 18px;
 }
 
 .list-stars {
@@ -109,45 +93,40 @@ main {
   gap: 5px;
 }
 
-.list-stars li img {
-   width: 15px;
-}
-
 /*  */
 
 
 .cards-comment-section {
-  /* flex: 1 1 0; */
   display: flex;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 
 .card-comment-container{
-  /* height: 250px; */
+  /* height: 200px; */
   border: 1px solid red;
 }
 
 .card-comment {
   background-color: hsl(300, 43%, 22%);
   border-radius: 0.5rem;
-  padding: 35px 25px;
+  padding: 2.5rem 2rem
 
 }
 
 .card-comment header {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 1.5rem;
 }
 
 .card-comment blockquote{
-  font-size: 0.9rem;
-  margin-top: 20px;
+  font-size: 18px;
+  margin-top: 30px;
   line-height: 20px;
 }
 
 .card-comment header img {
-  width: 35px;
+  width: 45px;
   border-radius: 2rem;
 }
 
@@ -162,7 +141,7 @@ main {
 
 .title-card h2,
 .title-card mark{
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .title-card mark {
