--- a/css/style.css
+++ b/css/style.css
@@ -16,35 +16,39 @@ main {
 .container {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 2.5rem;
   max-width: 80%;
-  min-height: 580px;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   /* border: 1px solid red; */
 }
 
 .sub-container {
-  display: grid;
-  grid-template-columns: repeat(12,1fr);
+  margin-top: 1.5rem;
+  display: flex;
+  gap: 13rem;
+
+  /* display: grid;
+  grid-template-columns: repeat(12,1fr); */
 }
 
 .info {
-  grid-area: 1/1/1/span 5;
-  width: 90%;
+  flex: 1 1 0;
+  /* grid-area: 1/1/1/span 5;
+  width: 90%; */
 }
 
 
 
 .info h1 {
+  max-width: 80%;
   color: hsl(300, 43%, 22%);
-  width: 70%;
-  font-size: 55px;
+  font-size: 50px;
   letter-spacing: -2px;
 }
 
 .info p {
   color: hsl(303, 10%, 53%);
-  font-size: 20px;
+  font-size: 18px;
   text-shadow: 0px 0px 1px hsl(303, 10%, 53%);
   margin: 1rem 0;
   line-height: 1.5rem;
@@ -52,9 +56,9 @@ main {
 }
 
 .card-note-section {
-  width: 90%;
-  margin-left: auto;
-  grid-area: 1/7/1/span 12;
+  flex: 1.2 1 0;
+  /* margin-left: auto; */
+  /* grid-area: 1/7/1/span 12; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -75,22 +79,22 @@ main {
 .card-note {
   display: flex;
   align-items: center;
-  gap: 1rem;
-  padding: 16px 45px 16px 30px;
+  text-align: center;
+  padding: 14px 25px 14px 20px;
   background-color: hsl(300, 24%, 96%);
   border-radius: 0.5rem;
-  min-width: 425px;
+  /* min-width: 380px; */
 }
 
 .card-note h3 {
   color: hsl(300, 43%, 22%);
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .list-stars {
   list-style: none;
   display: flex;
-  gap: 5px;
+  gap: 4px;
 }
 
 /*  */
@@ -98,35 +102,45 @@ main {
 
 .cards-comment-section {
   display: flex;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 
 .card-comment-container{
-  /* height: 200px; */
-  border: 1px solid red;
+  display: flex;
+  height: 230px;
+}
+
+#card-comment-three{
+    align-self: end;
+}
+
+#card-comment-two {
+    align-self: center;
 }
 
 .card-comment {
   background-color: hsl(300, 43%, 22%);
   border-radius: 0.5rem;
-  padding: 2.5rem 2rem
+  padding: 2rem ;
+  max-width: 350px;
+  max-height: 200px;
 
 }
 
 .card-comment header {
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 .card-comment blockquote{
-  font-size: 18px;
-  margin-top: 30px;
-  line-height: 20px;
+  font-size: 16px;
+  margin-top: 25px;
+  line-height: 18px;
 }
 
 .card-comment header img {
-  width: 45px;
+  width: 40px;
   border-radius: 2rem;
 }
 
@@ -136,12 +150,12 @@ main {
 }
 
 .title-card h2{
-  margin-bottom: 5px;
+  margin-bottom: 2px;
 }
 
 .title-card h2,
 .title-card mark{
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .title-card mark {
