--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("/images/bg-pattern-top-desktop.svg"),
-                    url("/images/bg-pattern-bottom-desktop.svg");
+  background-image: url("../images/bg-pattern-top-desktop.svg"),
+                    url("../images/bg-pattern-bottom-desktop.svg");
   background-repeat: no-repeat;
   background-position: left top, right top;
 
@@ -24,12 +24,13 @@ main {
   flex-direction: column;
   gap: 2.5rem;
   max-width: 80%;
+  margin-top: 1rem;
+  margin-left: 2rem;
 }
 
 .sub-container {
-  margin-top: 1.5rem;
   display: flex;
-  gap: 12rem;
+  gap: 10rem;
 }
 
 .info {
@@ -37,15 +38,14 @@ main {
 }
 
 .info h1 {
-  max-width: 80%;
   color: hsl(300, 43%, 22%);
-  font-size: 50px;
+  font-size: 60px;
   letter-spacing: -2px;
 }
 
 .info p {
   color: hsl(303, 10%, 53%);
-  font-size: 18px;
+  font-size: 19px;
   text-shadow: 0px 0px 1px hsl(303, 10%, 53%);
   margin: 1rem 0;
   line-height: 1.5rem;
@@ -76,21 +76,21 @@ main {
   display: flex;
   align-items: center;
   gap: 1rem;
-  padding: 14px 40px 14px 25px;
+  padding: 20px 45px 20px 30px;
   background-color: hsl(300, 24%, 96%);
   border-radius: 0.5rem;
-  min-width: 400px;
+  min-width: 430px;
 }
 
 .card-note h3 {
   color: hsl(300, 43%, 22%);
-  font-size: 17px;
+  font-size: 18px;
 }
 
 .list-stars {
   list-style: none;
   display: flex;
-  gap: 4px;
+  gap: 0.5rem;
 }
 
 .cards-comment-section {
@@ -100,7 +100,7 @@ main {
 
 .card-comment-container{
   display: flex;
-  height: 230px;
+  height: 260px;
 }
 
 #card-comment-three{
@@ -114,9 +114,9 @@ main {
 .card-comment {
   background-color: hsl(300, 43%, 22%);
   border-radius: 0.5rem;
-  padding: 2rem 2.3rem;
+  padding: 2.5rem 2rem;
   max-width: 365px;
-  max-height: 200px;
+  max-height: 240px;
 }
 
 .card-comment header {
@@ -127,8 +127,8 @@ main {
 
 .card-comment blockquote{
   font-size: 17px;
-  margin-top: 25px;
-  line-height: 18px;
+  margin-top: 30px;
+  line-height: 23px;
 }
 
 .card-comment header img {
@@ -160,8 +160,8 @@ main {
 @media (max-width: 375px){
   
   main {
-    background-image: url("/images/bg-pattern-top-mobile.svg"),
-                      url("/images/bg-pattern-bottom-mobile.svg");
+    background-image: url("../images/bg-pattern-top-mobile.svg"),
+                      url("../images/bg-pattern-bottom-mobile.svg");
     background-repeat: no-repeat;
     background-position: left top, right bottom;
   }
@@ -184,7 +184,6 @@ main {
   }
 
   .info h1 {
-    max-width: none;
     font-size: 45px;
   }
   
@@ -225,11 +224,11 @@ main {
 
   .card-comment {
     max-height: none;
+    padding: 2.2rem 2rem;
   }
 
   .card-comment blockquote{
     font-size: 1rem;
-    margin-top: 25px;
     line-height: 20px;
   }
 }
